--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,20 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 17
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: Save artifacts
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: jar-file
-          path: target/*.jar
+          java-version: '17-ea'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build backend application
+        run: mvn install --file pom.xml
