--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rest-assured.version>5.3.2</rest-assured.version>
         <testng.version>7.8.0</testng.version>
+        <json.version>20231013</json.version>
     </properties>
 
     <dependencies>
@@ -27,6 +28,12 @@
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${json.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
