--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rest-assured.version>5.3.2</rest-assured.version>
         <testng.version>7.8.0</testng.version>
+        <dotenv-java.version>3.0.0</dotenv-java.version>
         <json.version>20231013</json.version>
     </properties>
 
@@ -36,7 +37,7 @@
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>3.0.0</version>
+            <version>${dotenv-java.version}</version>
         </dependency>
     </dependencies>
 
