--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <rest-assured.version>5.3.2</rest-assured.version>
         <testng.version>7.8.0</testng.version>
         <dotenv-java.version>3.0.0</dotenv-java.version>
+        <apache-http.version>4.5.14</apache-http.version>
         <json.version>20231013</json.version>
     </properties>
 
@@ -38,6 +39,11 @@
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>${dotenv-java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache-http.version}</version>
         </dependency>
     </dependencies>
 
