--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 API_URL=https://api.practicesoftwaretesting.com
 WEB_URL=https://practicesoftwaretesting.com/
+ADMIN_EMAIL=admin@practicesoftwaretesting.com
+ADMIN_PASSWORD=welcome01
