--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <apache-http.version>4.5.14</apache-http.version>
         <json.version>20231013</json.version>
         <selenuim.version>4.15.0</selenuim.version>
+        <awaitility.version>4.2.0</awaitility.version>
     </properties>
 
     <dependencies>
@@ -50,6 +51,12 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenuim.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
